Fix reported build warnings for GTK https://bugs.webkit.org/show_bug.cgi?id=123439

Patch by Tibor Meszaros <mtibor@inf.u-szeged.hu> on 2013-11-12
Reviewed by Carlos Garcia Campos.

There was a void method, that has return value in it's documentation, so I removed it.

* bindings/gobject/WebKitDOMCustom.h:

Canonical link: https://commits.webkit.org/142405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159119 268f45cc-cd09-0410-ab3c-d52691b4dbfc